--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,6 +23,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "resend": "^4.3.0",
+    "sib-api-v3-sdk": "^8.5.0",
     "stripe": "^18.2.1",
     "validator": "^13.15.0"
   }
